--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -54,6 +54,9 @@ main{
                 row-gap: 1rem;
 
                 .settingAccount{
+                    .accountSelect{
+                        display: flex;
+                    }
                     .fromTo{
                         display: none;
                     }
