--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -4,21 +4,43 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+}
+
+header {
+  width: 100%;
+  height: 7.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #306BAC;
+}
+header h1 {
+  font-size: 2rem;
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+  color: white;
 }
 
 main {
-  margin-top: 2rem;
   display: flex;
   flex-direction: column;
+  block-size: block;
   width: 100%;
+  padding-top: 2.3rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 main .accountsContainer {
   display: flex;
@@ -26,6 +48,26 @@ main .accountsContainer {
   align-items: center;
   justify-content: flex-end;
   margin-bottom: 2rem;
+}
+main .accountsContainer #accountForm h1 {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+main .accountsContainer #accountForm input {
+  padding: 0.4rem;
+}
+main .accountsContainer #accountForm button {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: #1CAC78;
+  border: none;
+  border-radius: 0.2rem;
+  color: white;
+}
+main .accountsContainer #accountForm button:hover {
+  background-color: #1E7E5C;
 }
 main .summaryAccounts {
   display: flex;
@@ -38,24 +80,59 @@ main .transactionsContainer {
 }
 main .transactionsContainer #transactionsForm .typeTransactions {
   display: flex;
+  margin-bottom: 1rem;
+  align-items: center;
 }
-main .transactionsContainer #transactionsForm .typeTransactions fieldset {
+main .transactionsContainer #transactionsForm .typeTransactions h2 {
+  margin-right: 1rem;
+}
+main .transactionsContainer #transactionsForm .typeTransactions .transactionsFieldset {
   border: 0;
+}
+main .transactionsContainer #transactionsForm .typeTransactions input:nth-child(2), main .transactionsContainer #transactionsForm .typeTransactions input:nth-child(3) {
+  margin-left: 1rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
 }
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount {
+  display: flex;
+  align-items: center;
+}
 main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect {
   display: flex;
+  align-items: center;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect #selectionAccounts {
+  margin-left: 0.3rem;
+  padding: 0.3rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo {
   display: none;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory {
   display: flex;
+  align-items: center;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory #selectionCategory {
+  padding: 0.4rem;
+  margin-left: 0.3rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer {
   display: none;
+}
+main .transactionsContainer #transactionsForm input[type=submit] {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background-color: #295792;
+  border: none;
+  border-radius: 0.2rem;
+  color: white;
+}
+main .transactionsContainer #transactionsForm input[type=submit]:hover {
+  background-color: #1E4A7E;
 }/*# sourceMappingURL=index.css.map */
