--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -4,68 +4,175 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
 }
 
-main{
-    margin-top: 2rem;
+header {
+    width: 100%;
+    height: 7.5rem;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #306BAC;
+
+    h1 {
+        font-size: 2rem;
+        font-weight: 400;
+        letter-spacing: 0.5rem;
+        color: white;
+    }
+
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    block-size: block;
     width: 100%;
 
+    padding: {
+        top: 2.3rem;
+        bottom: 2rem;
+        left: 2rem;
+        right: 2rem;
+    }
 
-    .accountsContainer{
+    ;
+
+
+    .accountsContainer {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: flex-end;
         margin-bottom: 2rem;
-        #accountForm{
-            // display: flex;
+
+        #accountForm {
+            h1 {
+                font-size: 1.2rem;
+                margin-bottom: 0.5rem;
+            }
+
+            input {
+                padding: 0.4rem;
+            }
+
+            button {
+                padding: {
+                    top: 0.5rem;
+                    bottom: 0.5rem;
+                    left: 1rem;
+                    right: 1rem;
+                }
+
+                ;
+                background-color: #1CAC78;
+                border: none;
+                border-radius: 0.2rem;
+                color: white;
+
+                &:hover {
+                    background-color: #1E7E5C;
+                }
+            }
+
         }
 
 
     }
-    .summaryAccounts{
+
+    .summaryAccounts {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
     }
-    .transactionsContainer{
+
+    .transactionsContainer {
         margin-bottom: 2rem;
-        #transactionsForm{
-            .typeTransactions{
+
+        #transactionsForm {
+            .typeTransactions {
                 display: flex;
-                fieldset{
-                    border: 0;
+                margin-bottom: 1rem;
+                align-items: center;
+                
+
+                h2{
+                    margin-right: 1rem;
+                }
+
+                .transactionsFieldset {
+                    border: 0;   
+                }
+
+                & input:nth-child(2), & input:nth-child(3) {
+                    margin-left: 1rem;
                 }
             }
-            .settingsTransactions{
+
+            .settingsTransactions {
                 display: flex;
                 flex-direction: column;
                 row-gap: 1rem;
 
-                .settingAccount{
-                    .accountSelect{
+                .settingAccount {
+                    display: flex;
+                    align-items: center;
+                    .accountSelect {
                         display: flex;
+                        align-items: center;
+                        #selectionAccounts{
+                            margin-left: 0.3rem;
+                            padding: 0.3rem;
+                        }
                     }
-                    .fromTo{
+
+                    .fromTo {
                         display: none;
                     }
                 }
-                .settingCategory{
+
+                .settingCategory {
                     display: flex;
-                    .newCategoryContainer{
+                    align-items: center;
+                    #selectionCategory{
+                        padding: 0.4rem;
+                        margin-left: 0.3rem;
+                    }
+
+                    .newCategoryContainer {
                         display: none;
                     }
+                }
+            }
+
+            input[type="submit"] {
+                padding: {
+                    top: 0.5rem;
+                    bottom: 0.5rem;
+                    left: 1rem;
+                    right: 1rem;
+                }
+
+                ;
+                background-color: #295792;
+                border: none;
+                border-radius: 0.2rem;
+                color: white;
+
+                &:hover {
+                    background-color: #1E4A7E;
                 }
             }
         }
