Adding more styles

--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -54,7 +54,7 @@ main .accountsContainer #accountForm h1 {
   margin-bottom: 0.5rem;
 }
 main .accountsContainer #accountForm input {
-  padding: 0.4rem;
+  padding: 0.3rem;
 }
 main .accountsContainer #accountForm button {
   padding-top: 0.5rem;
@@ -95,7 +95,9 @@ main .transactionsContainer #transactionsForm .typeTransactions input:nth-child(
 main .transactionsContainer #transactionsForm .settingsTransactions {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: 1.2rem;
+  margin-bottom: 1.2rem;
+  margin-top: 1.2rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount {
   display: flex;
@@ -111,17 +113,63 @@ main .transactionsContainer #transactionsForm .settingsTransactions .settingAcco
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo {
   display: none;
+  align-items: center;
+  justify-content: center;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo .fromToSelections {
+  padding: 0.3rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:first-child {
+  margin-right: 0.3rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:last-of-type {
+  margin-left: 0.8rem;
+  margin-right: 0.3rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory {
   display: flex;
   align-items: center;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory #selectionCategory {
-  padding: 0.4rem;
+  padding: 0.3rem;
   margin-left: 0.3rem;
 }
 main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer {
   display: none;
+  margin-left: 0.8rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer input {
+  padding: 0.3rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: 0.3rem;
+  background-color: #FD7F20;
+  border: none;
+  border-radius: 0.2rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button:hover {
+  background-color: #E56E1B;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount {
+  display: flex;
+  align-items: center;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input {
+  padding: 0.3rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input:first-child {
+  margin-right: 1.5rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:first-child {
+  margin-right: 0.3rem;
+}
+main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:last-of-type {
+  margin-left: 0.8rem;
+  margin-right: 0.3rem;
 }
 main .transactionsContainer #transactionsForm input[type=submit] {
   padding-top: 0.5rem;
