--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -64,7 +64,7 @@ main {
             }
 
             input {
-                padding: 0.4rem;
+                padding: 0.3rem;
             }
 
             button {
@@ -106,17 +106,18 @@ main {
                 display: flex;
                 margin-bottom: 1rem;
                 align-items: center;
-                
 
-                h2{
+
+                h2 {
                     margin-right: 1rem;
                 }
 
                 .transactionsFieldset {
-                    border: 0;   
+                    border: 0;
                 }
 
-                & input:nth-child(2), & input:nth-child(3) {
+                & input:nth-child(2),
+                & input:nth-child(3) {
                     margin-left: 1rem;
                 }
             }
@@ -124,15 +125,19 @@ main {
             .settingsTransactions {
                 display: flex;
                 flex-direction: column;
-                row-gap: 1rem;
+                row-gap: 1.2rem;
+                margin-bottom: 1.2rem;
+                margin-top: 1.2rem;
 
                 .settingAccount {
                     display: flex;
                     align-items: center;
+
                     .accountSelect {
                         display: flex;
                         align-items: center;
-                        #selectionAccounts{
+
+                        #selectionAccounts {
                             margin-left: 0.3rem;
                             padding: 0.3rem;
                         }
@@ -140,19 +145,80 @@ main {
 
                     .fromTo {
                         display: none;
+                        align-items: center;
+                        justify-content: center;
+
+                        .fromToSelections {
+                            padding: 0.3rem;
+
+                        }
+
+                        & h5:first-child{
+                            margin-right: 0.3rem;
+                        }
+
+                        & h5:last-of-type{
+                            margin-left: 0.8rem;
+                            margin-right: 0.3rem;
+                        }
+
+
+
                     }
                 }
 
                 .settingCategory {
                     display: flex;
                     align-items: center;
-                    #selectionCategory{
-                        padding: 0.4rem;
+
+                    #selectionCategory {
+                        padding: 0.3rem;
                         margin-left: 0.3rem;
                     }
 
                     .newCategoryContainer {
                         display: none;
+                        margin-left: 0.8rem;
+
+                        input {
+                            padding: 0.3rem;
+                        }
+
+                        button {
+                            padding: {
+                                top: 0.5rem;
+                                bottom: 0.5rem;
+                                left: 1rem;
+                                right: 1rem;
+                            }
+
+                            margin-left: 0.3rem;
+                            background-color: #FD7F20;
+                            border: none;
+                            border-radius: 0.2rem;
+
+                            &:hover {
+                                background-color: #E56E1B;
+                            }
+                        }
+                    }
+                }
+
+                .settingAmmount {
+                    display: flex;
+                    align-items: center;
+                    input {
+                        padding: 0.3rem;
+                    }
+                    & input:first-child {
+                        margin-right: 1.5rem;
+                    }
+                    & h5:first-child{
+                        margin-right: 0.3rem;
+                    }
+                    & h5:last-of-type{
+                        margin-left: 0.8rem;
+                        margin-right: 0.3rem;
                     }
                 }
             }
