--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -26,9 +26,9 @@ header {
     background-color: #306bac;
 
     h1 {
-        font-size: 2rem;
-        font-weight: 400;
-        letter-spacing: 0.5rem;
+        font-size: 3rem;
+        font-weight: 600;
+        letter-spacing: 0.3rem;
         color: white;
     }
 }
@@ -39,15 +39,12 @@ main {
     block-size: block;
     width: 100%;
 
-
     padding: {
         top: 2.3rem;
         bottom: 2rem;
         left: 4rem;
         right: 4rem;
-    };
-
-
+    }
 
     .accountsContainer {
         display: flex;
@@ -56,7 +53,6 @@ main {
         justify-content: flex-end;
         margin-bottom: 2rem;
         #accountForm {
-
             h1 {
                 font-size: 1.2rem;
                 margin-bottom: 0.5rem;
@@ -75,18 +71,15 @@ main {
                     right: 1rem;
                 }
 
-                ;
-                background-color: #1CAC78;
+                background-color: #1cac78;
                 border: none;
                 border-radius: 0.2rem;
                 color: white;
 
                 &:hover {
-                    background-color: #1E7E5C;
+                    background-color: #1e7e5c;
                 }
             }
-
-
         }
     }
     .summaryAccounts {
@@ -101,17 +94,14 @@ main {
             .typeTransactions {
                 display: flex;
 
-
                 margin-bottom: 1rem;
                 align-items: center;
-
 
                 h2 {
                     margin-right: 1rem;
                 }
 
                 .transactionsFieldset {
-
                     border: 0;
                 }
 
@@ -128,14 +118,12 @@ main {
                 margin-top: 1.2rem;
 
                 .settingAccount {
-
                     display: flex;
                     align-items: center;
 
                     .accountSelect {
                         display: flex;
                         align-items: center;
-
 
                         #selectionAccounts {
                             margin-left: 0.3rem;
@@ -149,20 +137,16 @@ main {
 
                         .fromToSelections {
                             padding: 0.3rem;
-
                         }
 
-                        & h5:first-child{
+                        & h5:first-child {
                             margin-right: 0.3rem;
                         }
 
-                        & h5:last-of-type{
+                        & h5:last-of-type {
                             margin-left: 0.8rem;
                             margin-right: 0.3rem;
                         }
-
-
-
                     }
                 }
                 .settingCategory {
@@ -174,7 +158,6 @@ main {
                         padding: 0.3rem;
                         margin-left: 0.3rem;
                     }
-
 
                     .newCategoryContainer {
                         display: none;
@@ -193,12 +176,12 @@ main {
                             }
 
                             margin-left: 0.3rem;
-                            background-color: #FD7F20;
+                            background-color: #fd7f20;
                             border: none;
                             border-radius: 0.2rem;
 
                             &:hover {
-                                background-color: #E56E1B;
+                                background-color: #e56e1b;
                             }
                         }
                     }
@@ -213,10 +196,10 @@ main {
                     & input:first-child {
                         margin-right: 1.5rem;
                     }
-                    & h5:first-child{
+                    & h5:first-child {
                         margin-right: 0.3rem;
                     }
-                    & h5:last-of-type{
+                    & h5:last-of-type {
                         margin-left: 0.8rem;
                         margin-right: 0.3rem;
                     }
@@ -238,6 +221,33 @@ main {
 
                 &:hover {
                     background-color: #1e4a7e;
+                }
+            }
+        }
+    }
+    table {
+        width: 100%;
+        tbody {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+
+            #transInformation {
+                display: flex;
+                th {
+                    padding: 0.5rem 0;
+                    width: 100%;
+                    box-sizing: border-box;
+                    text-align: center;
+                }
+            }
+            .addInformation {
+                display: flex;
+                td {
+                    padding: 0.2rem 0;
+                    width: 100%;
+                    box-sizing: border-box;
+                    text-align: center;
                 }
             }
         }
