--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -49,15 +49,24 @@ main .accountsContainer {
   justify-content: flex-end;
   margin-bottom: 2rem;
 }
+main .accountsContainer #accountForm {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 main .accountsContainer #accountForm h1 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: right;
+  margin-right: 0.5rem;
 }
 main .accountsContainer #accountForm input {
   width: 15rem;
   padding: 0.3rem;
+  margin-right: 0.2rem;
 }
 main .accountsContainer #accountForm button {
+  width: 40%;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -76,73 +85,128 @@ main .summaryAccounts {
   justify-content: center;
   align-items: flex-end;
 }
-main .transactionsContainer {
+main .summaryAccounts ul {
+  width: 39%;
+  display: flex;
+  flex-direction: column;
+}
+main .summaryAccounts ul li {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+main .summaryAccounts ul li .account-name {
+  display: flex;
+  justify-content: flex-start;
+  width: 50%;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+}
+main .summaryAccounts ul li .balance {
+  display: flex;
+  justify-content: flex-start;
+  width: 50%;
+  padding-top: 0.1rem;
+  padding-bottom: 0.1rem;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+}
+main h1 {
+  width: 39%;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+main .accountsInfo {
+  display: flex;
+  width: 39%;
+  height: 5.5vh;
+  justify-content: space-between;
+  margin-top: 1rem;
+  background-color: #B8B8B8;
+  border-bottom: 1px solid black;
+}
+main .accountsInfo .accountName {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0.6rem;
+}
+main .accountsInfo .accountBalance {
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0.6rem;
+}
+
+.transactionsContainer {
   margin-bottom: 2rem;
 }
-main .transactionsContainer #transactionsForm .typeTransactions {
+.transactionsContainer #transactionsForm .typeTransactions {
   display: flex;
   margin-bottom: 1rem;
   align-items: center;
 }
-main .transactionsContainer #transactionsForm .typeTransactions h2 {
+.transactionsContainer #transactionsForm .typeTransactions h2 {
   margin-right: 1rem;
 }
-main .transactionsContainer #transactionsForm .typeTransactions .transactionsFieldset {
+.transactionsContainer #transactionsForm .typeTransactions .transactionsFieldset {
   border: 0;
 }
-main .transactionsContainer #transactionsForm .typeTransactions input:nth-child(2), main .transactionsContainer #transactionsForm .typeTransactions input:nth-child(3) {
+.transactionsContainer #transactionsForm .typeTransactions input:nth-child(2), .transactionsContainer #transactionsForm .typeTransactions input:nth-child(3) {
   margin-left: 1rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions {
+.transactionsContainer #transactionsForm .settingsTransactions {
   display: flex;
   flex-direction: column;
   row-gap: 1.2rem;
   margin-bottom: 1.2rem;
   margin-top: 1.2rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount {
   display: flex;
   align-items: center;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect {
   display: flex;
   align-items: center;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect #selectionAccounts {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect #selectionAccounts {
   margin-left: 0.3rem;
   padding: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo {
   display: none;
   align-items: center;
   justify-content: center;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo .fromToSelections {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo .fromToSelections {
   padding: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:first-child {
   margin-right: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:last-of-type {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:last-of-type {
   margin-left: 0.8rem;
   margin-right: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory {
   display: flex;
   align-items: center;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory #selectionCategory {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory #selectionCategory {
   padding: 0.3rem;
   margin-left: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer {
   display: none;
   margin-left: 0.8rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer input {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer input {
   padding: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -152,27 +216,27 @@ main .transactionsContainer #transactionsForm .settingsTransactions .settingCate
   border: none;
   border-radius: 0.2rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button:hover {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button:hover {
   background-color: #E56E1B;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount {
   display: flex;
   align-items: center;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input {
   padding: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input:first-child {
   margin-right: 1.5rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:first-child {
   margin-right: 0.3rem;
 }
-main .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:last-of-type {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:last-of-type {
   margin-left: 0.8rem;
   margin-right: 0.3rem;
 }
-main .transactionsContainer #transactionsForm input[type=submit] {
+.transactionsContainer #transactionsForm input[type=submit] {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -182,6 +246,6 @@ main .transactionsContainer #transactionsForm input[type=submit] {
   border-radius: 0.2rem;
   color: white;
 }
-main .transactionsContainer #transactionsForm input[type=submit]:hover {
+.transactionsContainer #transactionsForm input[type=submit]:hover {
   background-color: #1e4a7e;
 }/*# sourceMappingURL=index.css.map */
