--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -94,6 +94,7 @@ main .summaryAccounts ul li {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  margin-top: 0.5rem;
 }
 main .summaryAccounts ul li .account-name {
   display: flex;
@@ -124,7 +125,7 @@ main .accountsInfo {
   height: 5.5vh;
   justify-content: space-between;
   margin-top: 1rem;
-  background-color: #b8b8b8;
+  background-color: #B8B8B8;
   border-bottom: 1px solid black;
 }
 main .accountsInfo .accountName {
@@ -151,14 +152,10 @@ main .accountsInfo .accountBalance {
 .transactionsContainer #transactionsForm .typeTransactions h2 {
   margin-right: 1rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .typeTransactions
-  .transactionsFieldset {
+.transactionsContainer #transactionsForm .typeTransactions .transactionsFieldset {
   border: 0;
 }
-.transactionsContainer #transactionsForm .typeTransactions input:nth-child(2),
-.transactionsContainer #transactionsForm .typeTransactions input:nth-child(3) {
+.transactionsContainer #transactionsForm .typeTransactions input:nth-child(2), .transactionsContainer #transactionsForm .typeTransactions input:nth-child(3) {
   margin-left: 1rem;
 }
 .transactionsContainer #transactionsForm .settingsTransactions {
@@ -172,94 +169,45 @@ main .accountsInfo .accountBalance {
   display: flex;
   align-items: center;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .accountSelect {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect {
   display: flex;
   align-items: center;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .accountSelect
-  #selectionAccounts {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .accountSelect #selectionAccounts {
   margin-left: 0.3rem;
   padding: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .fromTo {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo {
   display: none;
   align-items: center;
   justify-content: center;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .fromTo
-  .fromToSelections {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo .fromToSelections {
   padding: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .fromTo
-  h5:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:first-child {
   margin-right: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAccount
-  .fromTo
-  h5:last-of-type {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAccount .fromTo h5:last-of-type {
   margin-left: 0.8rem;
   margin-right: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory {
   display: flex;
   align-items: center;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory
-  #selectionCategory {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory #selectionCategory {
   padding: 0.3rem;
   margin-left: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory
-  .newCategoryContainer {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer {
   display: none;
   margin-left: 0.8rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory
-  .newCategoryContainer
-  input {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer input {
   padding: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory
-  .newCategoryContainer
-  button {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -269,48 +217,27 @@ main .accountsInfo .accountBalance {
   border: none;
   border-radius: 0.2rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingCategory
-  .newCategoryContainer
-  button:hover {
+.transactionsContainer #transactionsForm .settingsTransactions .settingCategory .newCategoryContainer button:hover {
   background-color: #e56e1b;
 }
 .transactionsContainer #transactionsForm .settingsTransactions .settingAmmount {
   display: flex;
   align-items: center;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAmmount
-  input {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input {
   padding: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAmmount
-  input:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount input:first-child {
   margin-right: 1.5rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAmmount
-  h5:first-child {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:first-child {
   margin-right: 0.3rem;
 }
-.transactionsContainer
-  #transactionsForm
-  .settingsTransactions
-  .settingAmmount
-  h5:last-of-type {
+.transactionsContainer #transactionsForm .settingsTransactions .settingAmmount h5:last-of-type {
   margin-left: 0.8rem;
   margin-right: 0.3rem;
 }
-.transactionsContainer #transactionsForm input[type="submit"] {
+.transactionsContainer #transactionsForm input[type=submit] {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
@@ -320,32 +247,47 @@ main .accountsInfo .accountBalance {
   border-radius: 0.2rem;
   color: white;
 }
-.transactionsContainer #transactionsForm input[type="submit"]:hover {
+.transactionsContainer #transactionsForm input[type=submit]:hover {
   background-color: #1e4a7e;
 }
-main table {
+
+table {
+  margin-top: 1rem;
   width: 100%;
 }
-main table tbody {
+table tbody {
   width: 100%;
   display: flex;
   flex-direction: column;
+  border-spacing: 10rem 10rem;
+  background-color: #FAF9F6;
 }
-main table tbody #transInformation {
+table tbody #transactionsContainer {
   display: flex;
+  background-color: #B9D9EB;
+  border-bottom: 1px solid black;
 }
-main table tbody #transInformation th {
-  padding: 0.5rem 0;
+table tbody #transactionsContainer th {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   width: 100%;
   box-sizing: border-box;
   text-align: center;
 }
-main table tbody .addInformation {
+table tbody .transactionsInfo {
   display: flex;
 }
-main table tbody .addInformation td {
-  padding: 0.2rem 0;
+table tbody .transactionsInfo td {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   width: 100%;
   box-sizing: border-box;
   text-align: center;
-} /*# sourceMappingURL=index.css.map */
+}
+
+.filters {
+  display: flex;
+}
+.filters h3 {
+  margin-right: 0.5rem;
+}/*# sourceMappingURL=index.css.map */
