--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -342,5 +342,9 @@ main {
         h3{
             margin-right: 0.5rem;
         }
+        #filterByAccount, #filterByType, #filterByCategory{
+            margin-left: 0.5rem;
+            display: none;
+        }
     }
 
