--- a/frontend/sass/index.css
+++ b/frontend/sass/index.css
@@ -32,6 +32,52 @@ header h1 {
   color: white;
 }
 
+.notificationContainer {
+  display: none;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 5rem;
+  margin-right: 1rem;
+}
+.notificationContainer .notification {
+  display: grid;
+  grid-template-columns: 95% 5%;
+  width: 16rem;
+  height: 3.5rem;
+  background-color: red;
+  color: white;
+  border-radius: 0.5rem;
+}
+.notificationContainer .notification .messageContainer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding-left: 0.8rem;
+}
+.notificationContainer .notification .buttonContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-bottom: 0.3rem;
+  padding-right: 0.5rem;
+}
+.notificationContainer .notification .buttonContainer button {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.notificationContainer .notification .buttonContainer button:hover {
+  cursor: pointer;
+}
+
 main {
   width: 100%;
   display: grid;
