--- a/frontend/sass/index.scss
+++ b/frontend/sass/index.scss
@@ -33,6 +33,59 @@ header {
     }
 }
 
+.notificationContainer{
+    display: none;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 5rem;
+    margin-right: 1rem;
+    .notification{
+        display: grid;
+        grid-template-columns: 95% 5%;
+        width: 16rem;
+        height: 3.5rem;
+        background-color: red;
+        color: white;
+        border-radius: 0.5rem;
+        .messageContainer{
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            padding: {
+                left: 0.8rem;
+            
+            }
+        }
+        .buttonContainer{
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            padding: {
+               bottom: 0.3rem;
+               right: 0.5rem;
+            };
+            
+            button{
+                background-color: transparent;
+                border: none;
+                color: white;
+                font-size: 1rem;
+                font-weight: 600;
+                &:hover{
+                    cursor: pointer;
+                }
+    
+            }
+        }
+    }
+}
+
 main {
     // display: flex;
     // flex-direction: column;
